// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should match snapshot 1`] = `
<ForwardRef
  disabled={false}
  onPress={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#0084F8",
      "borderRadius": 4,
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#FFFFFF",
        "marginHorizontal": 36,
        "marginVertical": 12,
        "textAlign": "center",
      }
    }
    textType="semiBold"
    type="small"
  >
    Test
  </Text>
</ForwardRef>
`;

exports[`Button should match snapshot for disabled 1`] = `
<ForwardRef
  disabled={true}
  onPress={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#C9D6DF",
      "borderRadius": 4,
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#FFFFFF",
        "marginHorizontal": 36,
        "marginVertical": 12,
        "textAlign": "center",
      }
    }
    textType="semiBold"
    type="small"
  >
    Test
  </Text>
</ForwardRef>
`;

exports[`Button should match snapshot for secondary button 1`] = `
<ForwardRef
  disabled={false}
  onPress={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderColor": "#0084F8",
      "borderRadius": 4,
      "borderWidth": 1,
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#0084F8",
        "marginHorizontal": 36,
        "marginVertical": 12,
        "textAlign": "center",
      }
    }
    textType="semiBold"
    type="small"
  >
    Test
  </Text>
</ForwardRef>
`;
